<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lino2</name>
  <version>0.0.0</version>
  <description>Linorobot: ROS2 follower</description>
  <url type="website">http://www.linorobot.org</url>
  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <maintainer email="ybingcheng@gmail.com">BlockByBlock</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>lino_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>lino_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

